// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic-component given basic component *with* tailwindcss styles, should output tailwind styles appended 1`] = `
"/* eslint-disable */
import { registerInstance as __stencil_registerInstance } from \\"@stencil/core\\";
import { Component, Host, h } from \\"@stencil/core\\";
import basicComponentStyle from \\"./basic-component.css?tag=basic-component&encapsulation=shadow\\";
export const BasicComponent = class {
    constructor(hostRef) {
        __stencil_registerInstance(this, hostRef);
    }
    render() {
        return (h(Host, null, h(\\"div\\", { class: \\"flex flex-col\\" }, h(\\"slot\\", null))));
    }
};
BasicComponent.style = '.flex{display:flex}.flex-col{flex-direction:column}.shadow{--tw-shadow:0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);box-shadow:var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow)} ' +  basicComponentStyle;
"
`;

exports[`basic-component given basic component with no tailwindcss styles, should output unaltered styles 1`] = `
"/* eslint-disable */
import { registerInstance as __stencil_registerInstance } from \\"@stencil/core\\";
import { Component, Host, h } from \\"@stencil/core\\";
import basicComponentStyle from \\"./basic-component.css?tag=basic-component&encapsulation=shadow\\";
export const BasicComponent = class {
    constructor(hostRef) {
        __stencil_registerInstance(this, hostRef);
    }
    render() {
        return (h(Host, null, h(\\"slot\\", null)));
    }
};
BasicComponent.style = '.shadow{--tw-shadow:0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);box-shadow:var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow)} ' +  basicComponentStyle;
"
`;
